--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Myapp</title>
+  <title>GC App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="app.ico">
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    <div class="loading">
+      <div class="loader"></div>
+    </div>
+  </app-root>
 </body>
 </html>
